# opensil_genoa_poc

./: meson.build
xPRF/CCX/: xPrfCcx.c
xUSL/: Apob.c
xUSL/CCX/Common/: ApAsm.nasm  ApAsm32.nasm  Ccx.c  Ccx.h  CcxApLaunch.c  CcxApLaunch32.c  CcxMiscInit.c  NearJump.nasm  meson.build
xUSL/CCX/Zen4/: CcxCmn2Zen4.c
xUSL/CommonLib/: CpuLib.h  CpuOps32.nasm  Io.h  PciOps.c
xUSL/Include/: Porting.h  SilCommon.h
xUSL/Mpio/Common/: MpioTopology.c
